feat: Add fatal error page, subscribe to future refresh tokens

--- a/web/index.css
+++ b/web/index.css
@@ -84,3 +84,11 @@
 .x__icon--danger {
   color: var(--pf-global--danger-color--100);
 }
+
+.x__page--full {
+  min-width: 100%;
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
