feat: Add loading page

--- a/web/index.css
+++ b/web/index.css
@@ -89,6 +89,7 @@
   min-width: 100%;
   min-height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
